updated versions to 2011.12.01

--- a/AUTHORS
+++ b/AUTHORS
@@ -6,3 +6,5 @@ James Henstridge <james@daa.com.au>
 Dietmar Maurer <dietmar@ximian.com>
 Rodrigo Moya <rodrigo@ximian.com>
 Miguel de Icaza <miguel@ximian.com>
+Perberos <perberos@gmail.com>
+Stefano Karapetsas <stefano@karapetsas.com>
