fix things for 1.2

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Rodrigo Moya <rodrigo@ximian.com>
 Miguel de Icaza <miguel@ximian.com>
 Perberos <perberos@gmail.com>
 Stefano Karapetsas <stefano@karapetsas.com>
+Steve Zesch <stevezesch2@gmail.com>
