--- a/mate-data/mate-options.7
+++ b/mate-data/mate-options.7
@@ -2,9 +2,9 @@
 .\" Copyright 2002, 2003  Jochen Voss <voss@debian.org>
 .\" You may redistribute and modify this manual page
 .\" under the terms of the GPL.
-.TH mate-options 7 "2003-10-20" "MATE 2.2" "Mate User's Manual"
+.TH mate-options 7 "2003-10-20" "MATE" "Mate User's Manual"
 .SH NAME
-mate-options \- Standard Command Line Options for MATE 2 Programs
+mate-options \- Standard Command Line Options for MATE Programs
 .SH SYNOPSIS
 .IR "program " [ "standard options" "] [" "specific options" "] " arguments
 .SH DESCRIPTION
