--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+libmate 1.5.0
+
+dropped mate-vfs dependency.
+dropped mate_url_show_with_env() in libmate/mate-url.c. it was used only
+in libmateui and replaced with gio g_app_info_launch_default_for_uri().
+dropped unused mate-help.c.
+
 libmate 2011.12.01
 
 now
